...
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <com.unal.reto6.BoardView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/information"
...
